--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,19 +5,70 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, and protection services. Book your car spa online!" />
-    <meta name="keywords" content="Car Spa Belgaum, Car Detailing Belgaum, Car Cleaning Belgaum, Ceramic Coating Belgaum, Bike Spa Belgaum, Car Wash Belgaum, The Car Spa" />
+    <meta name="description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, paint protection, and more. Book your car or bike spa online! Trusted by hundreds in Belgaum." />
+    <meta name="keywords" content="Car Spa Belgaum, Car Detailing Belgaum, Car Cleaning Belgaum, Ceramic Coating Belgaum, Bike Spa Belgaum, Car Wash Belgaum, Best Car Spa in Belgaum, Premium Car Detailing Belgaum, Auto Detailing Belgaum, Affordable Car Spa Belgaum, Interior Cleaning Car Belgaum, Car Polish Belgaum, Car Paint Protection Belgaum, Car Scratch Removal Belgaum, Dent Removal Belgaum, Car Accessories Installation Belgaum, Car Spa Near Me, Bike Wash Belgaum, Professional Car Cleaning Belgaum, Car Spa Guruwar Peth Belgaum, Car Spa Near A K Sports Belgaum, Car Spa Karnataka, Car Spa India" />
     <meta name="author" content="The Car Spa, Belgaum" />
-    <meta property="og:title" content="The Car Spa - Belgaum's Best Car Detailing & Spa" />
-    <meta property="og:description" content="Premium car and bike spa, detailing, and protection in Belgaum. Book online!" />
+    <meta property="og:title" content="Car Spa Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating" />
+    <meta property="og:description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, and more. Book your service online. Trusted by hundreds in Belgaum." />
     <meta property="og:image" content="/logo.jpg" />
-    <meta property="og:url" content="https://thecarspabelgaum.com" />
+    <meta property="og:url" content="https://thecarspa-1.onrender.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="The Car Spa - Belgaum" />
-    <meta name="twitter:description" content="Premium car and bike spa, detailing, and protection in Belgaum. Book online!" />
+    <meta name="twitter:title" content="Car Spa Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating" />
+    <meta name="twitter:description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, and more. Book your service online. Trusted by hundreds in Belgaum." />
     <meta name="twitter:image" content="/logo.jpg" />
-    <title>The Car Spa | Belgaum's Best Car Detailing & Spa</title>
+    <title>Car Spa Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating</title>
+    
+    <!-- FAQPage Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is the best car spa in Belgaum?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "The Car Spa in Belgaum is rated highly for car and bike detailing, cleaning, and protection services. We offer premium care for your vehicle at Guruwar Peth, near A K Sports, Belgaum."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Do you offer ceramic coating in Belgaum?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, we offer professional ceramic coating for cars and bikes in Belgaum, along with teflon coating, paint protection, and more."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Where is The Car Spa located in Belgaum?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We are located at Guruwar Peth, near A K Sports, Belgaum, Karnataka 590003."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What services do you offer?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We offer car and bike detailing, interior cleaning, ceramic coating, teflon coating, paint protection, scratch removal, dent removal, accessories installation, and more in Belgaum."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How can I book a car spa in Belgaum?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "You can book your car or bike spa online through our website, or contact us at +91 7411116090."
+            }
+          }
+        ]
+      }
+    </script>
+    <!-- Google Business Profile: Make sure your business is verified and up to date at https://www.google.com/business/ -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
