--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, paint protection, and more. Book your car or bike spa online! Trusted by hundreds in Belgaum." />
-    <meta name="keywords" content="Car Spa Belgaum, Car Detailing Belgaum, Car Cleaning Belgaum, Ceramic Coating Belgaum, Bike Spa Belgaum, Car Wash Belgaum, Best Car Spa in Belgaum, Premium Car Detailing Belgaum, Auto Detailing Belgaum, Affordable Car Spa Belgaum, Interior Cleaning Car Belgaum, Car Polish Belgaum, Car Paint Protection Belgaum, Car Scratch Removal Belgaum, Dent Removal Belgaum, Car Accessories Installation Belgaum, Car Spa Near Me, Bike Wash Belgaum, Professional Car Cleaning Belgaum, Car Spa Guruwar Peth Belgaum, Car Spa Near A K Sports Belgaum, Car Spa Karnataka, Car Spa India" />
+    <meta name="description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, paint protection, and more. Best car spa in Belgaum - Book your car or bike spa online! Trusted by hundreds in Belgaum." />
+    <meta name="keywords" content="Car Spa Belgaum, Car Detailing Belgaum, Car Cleaning Belgaum, Best Car Spa in Belgaum, Ceramic Coating Belgaum, Bike Spa Belgaum, Car Wash Belgaum, Premium Car Detailing Belgaum, Auto Detailing Belgaum, Affordable Car Spa Belgaum, Interior Cleaning Car Belgaum, Car Polish Belgaum, Car Paint Protection Belgaum, Car Scratch Removal Belgaum, Dent Removal Belgaum, Car Accessories Installation Belgaum, Car Spa Near Me, Bike Wash Belgaum, Professional Car Cleaning Belgaum, Car Spa Guruwar Peth Belgaum, Car Spa Near A K Sports Belgaum, Car Spa Karnataka, Car Spa India" />
     <meta name="author" content="The Car Spa, Belgaum" />
-    <meta property="og:title" content="Car Spa Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating" />
-    <meta property="og:description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, and more. Book your service online. Trusted by hundreds in Belgaum." />
+    <meta property="og:title" content="Best Car Spa in Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating" />
+    <meta property="og:description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, and more. Best car spa in Belgaum - Book your service online. Trusted by hundreds in Belgaum." />
     <meta property="og:image" content="/logo.jpg" />
-    <meta property="og:url" content="https://thecarspa-1.onrender.com" />
+    <meta property="og:url" content="https://carspa-theta.vercel.app" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Car Spa Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating" />
-    <meta name="twitter:description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, and more. Book your service online. Trusted by hundreds in Belgaum." />
+    <meta name="twitter:title" content="Best Car Spa in Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating" />
+    <meta name="twitter:description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, and more. Best car spa in Belgaum - Book your service online. Trusted by hundreds in Belgaum." />
     <meta name="twitter:image" content="/logo.jpg" />
-    <title>Car Spa Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating</title>
+    <title>Best Car Spa in Belgaum | Car & Bike Detailing, Cleaning, Ceramic Coating</title>
     
     <!-- FAQPage Structured Data for SEO -->
     <script type="application/ld+json">
@@ -110,6 +110,90 @@
           "https://www.instagram.com/thecarspabelgaum"
         ]
       }
+    </script>
+    <!-- LocalBusiness Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "The Car Spa",
+      "description": "Premium car and bike detailing, cleaning, ceramic coating, and paint protection services in Belgaum",
+      "url": "https://carspa-theta.vercel.app",
+      "telephone": "+91-XXXXXXXXXX",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Guruwar Peth",
+        "addressLocality": "Belgaum",
+        "addressRegion": "Karnataka",
+        "postalCode": "590002",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "15.8497",
+        "longitude": "74.4977"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+          "opens": "09:00",
+          "closes": "19:00"
+        }
+      ],
+      "priceRange": "₹₹",
+      "currenciesAccepted": "INR",
+      "paymentAccepted": "Cash, Credit Card, Debit Card, UPI, Online Transfer",
+      "areaServed": {
+        "@type": "City",
+        "name": "Belgaum"
+      },
+      "serviceArea": {
+        "@type": "City",
+        "name": "Belgaum"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Car Spa Services",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Car Exterior Washing",
+              "description": "Professional exterior car washing service"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Car Interior Cleaning",
+              "description": "Comprehensive interior cleaning and detailing"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Ceramic Coating",
+              "description": "Premium ceramic coating for paint protection"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Bike Spa",
+              "description": "Complete bike detailing and cleaning services"
+            }
+          }
+        ]
+      },
+      "sameAs": [
+        "https://carspa-theta.vercel.app"
+      ]
+    }
     </script>
   </head>
   <body class="h-screen">
