Verification tag of google added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="ox11ulxRoDIuueD9iahrk_64Dt1oz8eqATJVjqSwDtw" />
     <meta name="description" content="The Car Spa in Belgaum offers premium car and bike detailing, cleaning, ceramic coating, teflon coating, paint protection, and more. Best car spa in Belgaum - Book your car or bike spa online! Trusted by hundreds in Belgaum." />
     <meta name="keywords" content="Car Spa Belgaum, Car Detailing Belgaum, Car Cleaning Belgaum, Best Car Spa in Belgaum, Ceramic Coating Belgaum, Bike Spa Belgaum, Car Wash Belgaum, Premium Car Detailing Belgaum, Auto Detailing Belgaum, Affordable Car Spa Belgaum, Interior Cleaning Car Belgaum, Car Polish Belgaum, Car Paint Protection Belgaum, Car Scratch Removal Belgaum, Dent Removal Belgaum, Car Accessories Installation Belgaum, Car Spa Near Me, Bike Wash Belgaum, Professional Car Cleaning Belgaum, Car Spa Guruwar Peth Belgaum, Car Spa Near A K Sports Belgaum, Car Spa Karnataka, Car Spa India" />
     <meta name="author" content="The Car Spa, Belgaum" />
